make sure created_on never wraps

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -137,6 +137,7 @@ td.created_on {
   text-align: right;
   vertical-align: middle;
   padding-right: 20px;
+  white-space: nowrap;
 
   .repeats {
     font-size: 90%;
